<!--
  ~ Copyright © 2015, 9x Media Pvt. Ltd.
  ~ Written under contract by Robosoft Technologies Pvt. Ltd.
  -->

<resources>
    <!-- <string name="app_name">Spotboye</string>-->

    <!-- Strings related to Network Check -->
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_network">No network. Please check your network connection.</string>
    <string name="please_check_internet_connection">Please check network connection</string>
    <string name="retry">Retry</string>


    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_text_size">Text Size</string>
    <string name="settings_offline_cache">Offline Caching</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_rate_review">Rate &amp; Review</string>
    <string name="settings_terms_conditions">Terms &amp; Conditions</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_contact_us">Contact Us</string>
    <string name="settings_disclaimer">Disclaimer</string>

    <!-- Feedback -->
    <string name="feedback_email">feedback@spotboye.com</string>
    <string name="feedback_email_subject">SpotboyE Feedback Android</string>
    <string name="email_chooser_text">Send Email  &#8230;</string>

    <!-- Hello Editor -->
    <string name="hello_editor_email">editor@spotboye.com</string>
    <string name="hello_editor_subject">SpotboyE Hello Editor Android</string>

    <!-- Text Size -->
    <string name="title_text_size">Text Size</string>
    <string name="select_text_size">Select text size if you are facing any readable issues</string>

    <!-- Photo Gallery -->
    <string name="number_of_images">%d Images</string>

    <!-- Search -->
    <string name="search_hint">Search</string>

    <!-- Server Error-->
    <string name="server_error">Network Error</string>

    <!-- App Quit Dialog-->
    <string name="exit_app">Exit Application?</string>
    <string name="exit_app_msg">Do you want to quit application ?</string>

    <!-- App Update Dialog -->
    <string name="update_now">Update Now</string>
    <string name="no_thanks">No Thanks</string>

    <!-- Article Detail-->
    <string name="read_more">Read More</string>
    <string name="submit">Submit</string>
    <string name="number_of_comment">%d Comment</string>
    <string name="number_of_comments">%d Comments</string>
    <string name="related_articles">Realted Articles</string>
    <!--    <string name="comment_char_limit_disply">%d\/%d</string>-->

    <!--  Reactometer  -->
    <string name="omg">omg</string>
    <string name="wow">wow</string>
    <string name="lol">lol</string>
    <string name="wtf">wtf</string>
    <string name="reactometer_response">%s%</string>

    <!-- Navigation Drawer Header -->
    <string name="guest_user">Guest User</string>
    <string name="view_more_comments">View More Comments</string>

    <!-- Share-->
    <string name="share_using">Share Using</string>

    <!-- Photo Gallery -->
    <string name="photo_gallery">Photo Gallery</string>
    <string name="memes">Memes</string>

    <!-- Login -->
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="skip">Skip</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>

    <!-- Register -->
    <string name="set_profile_pic">SET PROFILE PIC</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="agree_terms">I agree to the </string>
    <string name="terms_conditions">&#160;<u>terms &amp; conditions</u></string>


    <string name="send_reset_instructions">SEND RESET INSTRUCTIONS</string>
    <string name="enter_registered_email_address">Enter your registered email address</string>

    <string name="enter_email_address">Enter your email address...</string>

    <!-- View More Comments -->
    <string name="comments">Comments</string>

    <!--Facebook -->
    <string name="title_activity_google_plus">GooglePlusActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="go">Go</string>

    <string name="twitter_app_id">9HcHtFLryNFRG5k7eQreeavtr</string>

    <!--JW PLAYER key -->
    <string name="jw_player_key">sZq+OSbrcG3ZN0v2Wx4GIxApDgCmTCGRt168ww==</string>

    <!-- News Letter -->
    <string name="news_letter">News Letter</string>

    <!--Error Messages-->
    <string name="register_success">A verification link has been sent to your email ID. If you don’t receive the email check ‘spam’. </string>
    <string name="email_registered">Email Already registered</string>
    <string name="enter_email">Please enter a valid email ID.</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Please enter a Password.</string>
    <string name="enter_mobile_number">Please enter a valid Mobile number.</string>
    <string name="enter_valid_email">Please enter a valid email ID.</string>
    <string name="enter_valid_password">Your password should be a minimum of 5 characters.</string>
    <string name="agree_tac">Please agree to terms and conditions to register</string>
    <string name="email">Email</string>
    <string name="sign_in_failed">Invalid email or password</string>
    <string name="enter_valid_phone_number">Mobile number should be of 10 digits.</string>
    <string name="enter_registered_email">Please enter registered email ID.</string>

    <!-- Messages -->
    <string name="msg_invalid_comment">Please enter valid comment</string>
    <string name="play_base_url">https://play.google.com/store/apps/details?id=</string>
    <string name="gcm_SenderId">819051863101 </string>
    <string name="logout_confirmation">Are you sure you want to logout</string>
    <string name="error_network">no network</string>
    <string name="error_no_response">no response</string>
    <string name="error_network_http_error">http error</string>
    <string name="quiz_cuit">Are you sure you want to quit the </string>
    <string name="title_activity_quiz">QuizActivity</string>

    <!-- -Share -->
    <string name="website_link">www.9xe.com</string>
    <string name="msg_search_no_results">No results found for “%s”.
        Please check if you have entered the correct spelling or try a different keyword.</string>
    <string name="title_activity_live_tv">LiveTVActivity</string>
    <string name="poll_attemted">You have already attempted this poll</string>
    <string name="polls">Polls</string>

    <!-- -Notification Settings -->
    <string name="title_notification_settings">Notification Settings</string>
    <string name="login_required">You need to login to attempt this </string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="quiz_attempted">You have already attempted this</string>

    <!-- Personality Test -->
    <string name="personality_test">Personality Tests</string>

    <!-- -Notification Hub -->
    <string name="title_notification_hub">Notifications</string>
    <string name="msg_not_subscribe_to_notification">Please turn on the notifications in settings to get notifications.</string>

    <!-- Empty Messages-->
    <string name="msg_empty_notifications">No Notifications</string>
    <string name="msg_empty_articles">No Content Available</string>
    <string name="msg_no_photos">No photos.</string>
    <string name="title_activity_deep_linking_listener">DeepLinkingListenerActivity</string>

    <!--Welcome Screen-->
    <string name="welcome_screen_1_text">is now</string>
    <string name="welcome_screen_2_text">Get the latest buzz on Celebrities, Exclusive interviews, Scoops, Make ups and break ups, Red carpet events, Videos, Pictures, Movie reviews, Box Office reports and much more. Everything you always wanted to know, be it Bollywood, Television, Music or Fashion we have it all. </string>
    <string name="lets_get_started">Lets get started</string>
    <string name="please_try_later">Please try after some time</string>
    <string name="welcome_screen_1_2_text">The Perfect App For Bollywood Fans</string>
    <string name="title_activity_notification_dialog">NotificationDialogActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_alertdialog">Show Article</string>
    <string name="rate_app">Rate SpotBoye App</string>
    <string name="rate_message">If you enjoy using SpotBoye app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support! </string>
    <string name="rate_never">No, thanks</string>
    <string name="rate_remind_later">Remind me later</string>
    <string name="rate_spotboye">Rate SpotBoye</string>


</resources>
