<!--
  ~ Copyright © 2015, 9x Media Pvt. Ltd.
  ~ Written under contract by Robosoft Technologies Pvt. Ltd.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ninexe.ui.fragments.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_send"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/blue">

            <ImageView
                android:id="@+id/btn_back1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:src="@drawable/back_icn" />

            <ImageView
                android:id="@+id/ninexe_logo"
                android:paddingTop="50dp"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:paddingBottom="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/header_logo" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/dark_blue"
                android:orientation="vertical">

                <com.ninexe.ui.widgets.AnyFontTextView
                    style="@style/Text.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:padding="@dimen/padding_10"
                    android:text="@string/enter_registered_email_address"
                    android:textColor="@color/white"
                    custom:typefaceAsset="fonts/OpenSans-Regular.ttf" />

                <com.ninexe.ui.widgets.AnyFontEditText
                    android:id="@+id/emailField"
                    style="@style/Text.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:background="@null"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="@dimen/padding_20"
                    android:drawableStart="@drawable/email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edittext_hint_white"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    custom:typefaceAsset="fonts/OpenSans-Regular.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:layout_marginLeft="@dimen/padding_10"
                    android:layout_marginRight="@dimen/padding_10"
                    android:background="@color/white" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.ninexe.ui.widgets.AnyFontButtonView
        android:id="@+id/btn_send"
        style="@style/ButtonWithBlueSolid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/padding_20"
        android:text="@string/send_reset_instructions" />

    <include layout="@layout/retry_layout" />


</RelativeLayout>
